support show empty module.